# web-app

./: .dockerignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  Trunk.toml  index.html  nginx.conf  styles.css
.github/workflows/: ci.yml
src/: app.rs  main.rs
src/sections/: agitation.rs  comparison.rs  dual_lock.rs  faq.rs  final_cta.rs  footer.rs  hero.rs  how_it_works.rs  mod.rs  navbar.rs  pain_points.rs  pricing.rs  saladier_demo.rs  stats_bar.rs  trust.rs
