[package]
name = "saladvault-web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "Element",
    "HtmlElement",
    "DomRect",
    "Window",
    "ScrollToOptions",
    "ScrollBehavior",
    "CssStyleDeclaration",
    "MouseEvent",
    "DomTokenList",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
